--- a/Expoandes/app/src/main/res/layout/fragment_notifications.xml
+++ b/Expoandes/app/src/main/res/layout/fragment_notifications.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="104dp"
+        android:fontFamily="@font/roboto_bold"
         android:text="¡Espéranos!"
         android:textColor="#0C2E43"
         android:textSize="25sp"
@@ -26,6 +27,7 @@
         android:layout_marginStart="177dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="177dp"
+        android:fontFamily="@font/roboto_medium"
         android:text="Esta función estará disponible en futuras actualizaciones."
         android:textColor="#0A1847"
         app:layout_constraintEnd_toEndOf="parent"
